feat: implement basic structure

--- a/index.html
+++ b/index.html
@@ -6,6 +6,156 @@
     <link rel="stylesheet" href="style.css" />
     <title>Jupiter | Demo Panel</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <h1>Jupiter</h1>
+        <button>
+          <a href="#">Buy Now</a>
+        </button>
+      </div>
+      <div>
+        <h2>The best landing page for your digital product</h2>
+        <button>
+          <a href="#">See Demo</a>
+        </button>
+      </div>
+      <div>
+        <img src="assets/images/header-image.png" alt="header-laptop" />
+      </div>
+    </header>
+    <section>
+      <div>
+        <span></span>
+        <h3>Amazing Layouts</h3>
+      </div>
+      <div>
+        <div>
+          <div>
+            <button>
+              <a href="#">Preview</a>
+            </button>
+          </div>
+          <span>Demo 01</span>
+        </div>
+
+        <div>
+          <div>
+            <button>
+              <a href="#">Preview</a>
+            </button>
+          </div>
+          <span>Demo 02</span>
+        </div>
+
+        <div>
+          <div>
+            <button>
+              <a href="#">Preview</a>
+            </button>
+          </div>
+          <span>Demo 03</span>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <span></span>
+        <h3>Blog Layouts</h3>
+      </div>
+      <div>
+        <div>
+          <div>
+            <button>
+              <a href="#">Preview</a>
+            </button>
+          </div>
+          <span>Blog Page</span>
+        </div>
+        <div>
+          <div>
+            <button>
+              <a href="#">Preview</a>
+            </button>
+          </div>
+          <span>Single Page</span>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <span></span>
+        <h3>50+ ready to use elements</h3>
+      </div>
+      <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+      </div>
+    </section>
+    <section>
+      <div>
+        <span></span>
+        <h3>Much more exclusive features</h3>
+      </div>
+      <div>
+        <div>
+          <span></span>
+          <h5>Amazing Layouts</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+        <div>
+          <span></span>
+          <h5>Contact Form</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+        <div>
+          <span></span>
+          <h5>Easy Google Fonts</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+        <div>
+          <span></span>
+          <h5>Bootstrap Layout</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+
+        <div>
+          <span></span>
+          <h5>WoW Effects</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+        <div>
+          <span></span>
+          <h5>Customized code</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+        <div>
+          <span></span>
+          <h5>Clean Design</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+        <div>
+          <span></span>
+          <h5>Well Documented</h5>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div>
+        <h3>Create awesome website using Jupiter</h3>
+        <button>
+          <a href="#">Purchase Now</a>
+        </button>
+      </div>
+    </footer>
+    <div id="swoosh-up">
+      <span></span>
+    </div>
+  </body>
   <script src="index.js"></script>
 </html>
