--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         </button>
       </div>
       <div>
-        <h2>The best landing page for your digital product</h2>
+        <h2>The best landing page for your digital product.</h2>
         <button>
           <a href="#">See Demo</a>
         </button>
