style: add basic styles in all sections

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <img src="assets/images/header-image.png" alt="header-laptop" />
       </div>
     </header>
-    <section>
+    <section id="demos-section">
       <div>
         <span></span>
         <h3>Amazing Layouts</h3>
@@ -58,7 +58,7 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="blogs-section">
       <div>
         <span></span>
         <h3>Blog Layouts</h3>
@@ -82,21 +82,34 @@
         </div>
       </div>
     </section>
-    <section>
+    <section id="widgets-section">
       <div>
         <span></span>
         <h3>50+ ready to use elements</h3>
       </div>
       <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div>
+          <img src="./assets/images/widget-1.png" alt="widget-1" />
+        </div>
+
+        <div>
+          <img src="./assets/images/widget-2.png" alt="widget-2" />
+        </div>
+        <div>
+          <img src="./assets/images/widget-3.png" alt="widget-3" />
+        </div>
+        <div>
+          <img src="./assets/images/widget-4.png" alt="widget-4" />
+        </div>
+        <div>
+          <img src="./assets/images/widget-5.png" alt="widget-5" />
+        </div>
+        <div>
+          <img src="./assets/images/widget-6.png" alt="widget-6" />
+        </div>
       </div>
     </section>
-    <section>
+    <section id="features-section">
       <div>
         <span></span>
         <h3>Much more exclusive features</h3>
@@ -105,43 +118,43 @@
         <div>
           <span></span>
           <h5>Amazing Layouts</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div>
           <span></span>
           <h5>Contact Form</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div>
           <span></span>
           <h5>Easy Google Fonts</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div>
           <span></span>
           <h5>Bootstrap Layout</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
 
         <div>
           <span></span>
           <h5>WoW Effects</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div>
           <span></span>
           <h5>Customized code</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div>
           <span></span>
           <h5>Clean Design</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
         <div>
           <span></span>
           <h5>Well Documented</h5>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim quaerat sed laudantium labore incidunt ullam suscipit temporibus</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
       </div>
     </section>
@@ -154,7 +167,7 @@
       </div>
     </footer>
     <div id="swoosh-up">
-      <span></span>
+      <span>a</span>
     </div>
   </body>
   <script src="index.js"></script>
