style: implement new styles for all sections

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     </header>
     <section id="demos-section">
       <div>
-        <span></span>
+        <div class="section-icon-container">
+          <div class="section-icon"></div>
+        </div>
+
         <h3>Amazing Layouts</h3>
       </div>
       <div>
@@ -35,7 +38,9 @@
             <button>
               <a href="#">Preview</a>
             </button>
+            <div></div>
           </div>
+
           <span>Demo 01</span>
         </div>
 
@@ -44,6 +49,7 @@
             <button>
               <a href="#">Preview</a>
             </button>
+            <div></div>
           </div>
           <span>Demo 02</span>
         </div>
@@ -53,6 +59,7 @@
             <button>
               <a href="#">Preview</a>
             </button>
+            <div></div>
           </div>
           <span>Demo 03</span>
         </div>
@@ -60,7 +67,10 @@
     </section>
     <section id="blogs-section">
       <div>
-        <span></span>
+        <div class="section-icon-container">
+          <div class="section-icon"></div>
+        </div>
+
         <h3>Blog Layouts</h3>
       </div>
       <div>
@@ -69,6 +79,7 @@
             <button>
               <a href="#">Preview</a>
             </button>
+            <div></div>
           </div>
           <span>Blog Page</span>
         </div>
@@ -77,6 +88,7 @@
             <button>
               <a href="#">Preview</a>
             </button>
+            <div></div>
           </div>
           <span>Single Page</span>
         </div>
@@ -84,7 +96,10 @@
     </section>
     <section id="widgets-section">
       <div>
-        <span></span>
+        <div class="section-icon-container bulb bulb-white">
+          <div class="section-icon"></div>
+        </div>
+
         <h3>50+ ready to use elements</h3>
       </div>
       <div>
@@ -111,7 +126,10 @@
     </section>
     <section id="features-section">
       <div>
-        <span></span>
+        <div class="section-icon-container bulb">
+          <div class="section-icon"></div>
+        </div>
+
         <h3>Much more exclusive features</h3>
       </div>
       <div>
@@ -167,7 +185,9 @@
       </div>
     </footer>
     <div id="swoosh-up">
-      <span>a</span>
+      <a href="#">
+        <img src="./assets/icons/swoosh-up.svg" alt="swoosh-up-icon" />
+      </a>
     </div>
   </body>
   <script src="index.js"></script>
