style: modify all the styles in the website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <title>Jupiter | Demo Panel</title>
   </head>
   <body>
@@ -20,7 +22,7 @@
           <a href="#">See Demo</a>
         </button>
       </div>
-      <div>
+      <div data-aos="zoom-in" data-aos-offset="300">
         <img src="assets/images/header-image.png" alt="header-laptop" />
       </div>
     </header>
@@ -33,7 +35,7 @@
         <h3>Amazing Layouts</h3>
       </div>
       <div>
-        <div>
+        <div data-aos="fade-up" data-aos-offset="300">
           <div>
             <button>
               <a href="#">Preview</a>
@@ -44,7 +46,7 @@
           <span>Demo 01</span>
         </div>
 
-        <div>
+        <div data-aos="fade-up" data-aos-offset="500">
           <div>
             <button>
               <a href="#">Preview</a>
@@ -54,7 +56,7 @@
           <span>Demo 02</span>
         </div>
 
-        <div>
+        <div data-aos="fade-up" data-aos-offset="600">
           <div>
             <button>
               <a href="#">Preview</a>
@@ -74,7 +76,7 @@
         <h3>Blog Layouts</h3>
       </div>
       <div>
-        <div>
+        <div data-aos="fade-up" data-aos-offset="300">
           <div>
             <button>
               <a href="#">Preview</a>
@@ -83,7 +85,7 @@
           </div>
           <span>Blog Page</span>
         </div>
-        <div>
+        <div data-aos="fade-up" data-aos-offset="600">
           <div>
             <button>
               <a href="#">Preview</a>
@@ -133,44 +135,60 @@
         <h3>Much more exclusive features</h3>
       </div>
       <div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container one">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Amazing Layouts</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container two">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Contact Form</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container three">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Easy Google Fonts</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container four">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Bootstrap Layout</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
 
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container five">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>WoW Effects</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container six">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Customized code</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container seven">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Clean Design</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
-        <div>
-          <span></span>
+        <div data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in">
+          <div class="features-section-icon-container eight">
+            <div class="features-section-icon"></div>
+          </div>
           <h5>Well Documented</h5>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         </div>
